# bandits

./: .gitignore  egreedy.py  linucb.py  plot_comparison.py  pyproject.toml  requirements.txt
bandit_llm/: __init__.py  backends.py  core.py  plotting.py  prompts.py
bl/: hybridlinucb.py  preprocess.py  slm.py  slm_cot.py  slm_cot_hf.py  slm_cot_vllm.py  utils.py
bl/data/: users_with_embeddings_20.pkl  users_with_embeddings_50.pkl
ml/: CLAUDE.md  bandits.py  get_impressions.py  huggingface_runner.py  hybridlinucb.py  main.py  main_linucb.py  main_sliding.py  mainv2.py  ollama_runner.py  openai_runner.py  preprocess.py  slm.py  slm_cot.py  slm_cot_hf.py  slm_cot_vllm.py  utils.py  vllm_runner.py
ml/configs/: linucb.json  random.json  smoke_window.json
ml/configs/arc/: gpt-oss-120b.json
ml/configs/huggingface/: gemma4-e2b.json  gemma4_e2b.json  granite4.1_3b.json  llama3.2_1b.json  qwen3.5_2b.json
ml/configs/ollama/: llama3_8b.json
ml/data/: movies_enriched.parquet  users.pkl
ml/setup/: get_impressions.py  get_metadata.py
ml/utils/: arc_runner.py  features.py  huggingface_runner.py  ollama_runner.py  vllm_runner.py
my_impl/: ucb.py
v2/: analysis.ipynb  baselines.py  covertype.py  hatespeech.py  history.py  mab.py  metrics.py  run.py  runners.py
v2/configs/: baseline.json  covertype.json  covertype_ns.json  gemma4_e2b.json  gemma4_e2b_covertype.json  gemma4_e2b_ns.json  granite4.1_3b.json  granite4.1_3b_ns.json  llama3.2_3b.json  llama3.2_3b_covertype.json  llama3.2_3b_covertype_ns.json  llama3.2_3b_ns.json  qwen3_4b.json
(+10 files in other folders)
