[project]
name = "rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "mteb>=2.12.30",
    "ollama>=0.6.1",
    "openai>=2.31.0",
    "pandas>=3.0.2",
    "pandas-stubs>=3.0.0.260204",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.4.1",
    "torch>=2.11.0",
    "transformers>=5.5.4",
]
