[project]
name = "bandits"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azureopenai>=0.0.1",
    "numpy>=2.4.6",
    "ollama>=0.6.2",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "tqdm>=4.67.3",
    "vllm>=0.21.0",
]
