[project]
name = "bandits"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "azureopenai>=0.0.1",
    "ipykernel>=7.3.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "ollama>=0.6.2",
    "openai>=2.37.0",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "sentence-transformers>=5.5.1",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.8.1",
    "vllm>=0.21.0 ; sys_platform == 'linux'",
]
